--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -8,9 +8,8 @@
   },
   "author": "Euheny Bondarovich",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
-    "@sfem/breakpoint": "^1.1.0",
+  "dependencies": {
+    "@sfem/breakpoint": "^1.1.2",
     "autoprefixer": "^7.2.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
