--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -17,6 +17,7 @@
     "css-mqpacker": "^7.0.0",
     "del": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-dart-sass": "^0.9.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
@@ -33,5 +34,9 @@
   "bugs": {
     "url": "https://github.com/sfem/grid/issues"
   },
-  "homepage": "https://github.com/sfem/grid#readme"
+  "homepage": "https://github.com/sfem/grid#readme",
+  "browserslist": [
+    "> 1%",
+    "Last 2 versions"
+  ]
 }
