--- a/packages/css-sugars/package.json
+++ b/packages/css-sugars/package.json
@@ -9,22 +9,23 @@
   "license": "ISC",
   "dependencies": {
     "@sfem/breakpoint": "^1.2.1",
-    "@sfem/scss-sugars": "^1.2.5",
-    "autoprefixer": "^8.6.4",
+    "@sfem/scss-sugars": "^1.3.0",
+    "autoprefixer": "^9.6.1",
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "css-mqpacker": "^6.0.1",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
+    "css-mqpacker": "^7.0.0",
+    "del": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-dart-sass": "^0.9.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sequence": "^1.0.0",
-    "node-sass-tilde-importer": "^1.0.1",
+    "node-sass-tilde-importer": "^1.0.2",
     "path": "^0.12.7",
     "postcss-csso": "^3.0.0",
-    "postcss-flexbugs-fixes": "^3.3.0"
+    "postcss-flexbugs-fixes": "^4.1.0"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,9 @@
   "bugs": {
     "url": "https://github.com/sfem/css-sugars/issues"
   },
-  "homepage": "https://github.com/sfem/css-sugars#readme"
+  "homepage": "https://github.com/sfem/css-sugars#readme",
+  "browserslist":[
+    "> 1%",
+    "Last 2 versions"
+  ]
 }
