--- a/packages/css-sugars/package.json
+++ b/packages/css-sugars/package.json
@@ -3,29 +3,20 @@
   "version": "1.3.0",
   "description": "CSS class helpers",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node ./build.js"
   },
   "author": "Euheny Bondarovich",
   "license": "ISC",
   "dependencies": {
-    "@sfem/breakpoint": "^1.2.1",
+    "@sfem/breakpoint": "^2.0.0",
     "@sfem/scss-sugars": "^1.3.0",
     "autoprefixer": "^9.6.1",
-    "babel": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
     "css-mqpacker": "^7.0.0",
-    "del": "^5.0.0",
-    "gulp": "^4.0.2",
-    "gulp-dart-sass": "^0.9.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sequence": "^1.0.0",
     "node-sass-tilde-importer": "^1.0.2",
-    "path": "^0.12.7",
+    "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
-    "postcss-flexbugs-fixes": "^4.1.0"
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "sass": "^1.22.12"
   },
   "repository": {
     "type": "git",
