--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -16,7 +16,8 @@
     "node-sass-tilde-importer": "^1.0.2",
     "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
-    "postcss-flexbugs-fixes": "^4.1.0"
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "sass": "^1.22.12"
   },
   "repository": {
     "type": "git",
