--- a/packages/elementaris/package.json
+++ b/packages/elementaris/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@sfem/elementaris",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple modules for building front-end",
+  "author": "Euheny Bondarovich <euheny@gmail.com>",
+  "license": "ISC",
+  "main": "dist/elementaris.min.css",
   "scripts": {
     "build": "node ./build.js"
   },
-  "author": "Euheny Bondarovich <euheny@gmail.com>",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sfem/elementaris.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sfem/elementaris/issues"
+  },
+  "homepage": "https://github.com/sfem/elementaris/tree/master/packages/elementaris",
   "dependencies": {
     "@sfem/breakpoint": "^2.0.0",
     "@sfem/css-sugars": "^2.0.0",
@@ -20,14 +29,6 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "sass": "^1.22.12"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sfem/css-sugars.git"
-  },
-  "bugs": {
-    "url": "https://github.com/sfem/css-sugars/issues"
-  },
-  "homepage": "https://github.com/sfem/css-sugars#readme",
   "browserslist": [
     "> 1%",
     "Last 2 versions"
