--- a/packages/scss-sugars/package.json
+++ b/packages/scss-sugars/package.json
@@ -16,5 +16,6 @@
   "homepage": "https://github.com/sfem/elementaris/tree/master/packages/scss-sugars",
   "dependencies": {
     "@sfem/breakpoint": "^2.0.0"
-  }
+  },
+  "gitHead": "e6417123cfc0cccddba3fd2bfe934a2ec7f47c20"
 }
